fixed title sizes on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -245,37 +245,37 @@ body {
     }
     
     .about-title {
-        font-size: 4rem;
+        font-size: 4rem !important;
         font-weight: 600 !important;
         font-family: 'Nunito', serif;
     }
     
     .about-text {
-        font-size: 1.2rem;
+        font-size: 1.2rem !important;
         font-weight: 200 !important;
         font-family: 'Nunito', serif;
     }
     
     .portfolio-title {
-        font-size: 4rem;
+        font-size: 4rem !important;
         font-weight: 600 !important;
         font-family: 'Nunito', serif;
     }
     
     .portfolio-text {
-        font-size: 1.2rem;
+        font-size: 1.2rem !important;
         font-weight: 200 !important;
         font-family: 'Nunito', serif;
     }
     
     .umbriel-title {
-        font-size: 2rem;
+        font-size: 2rem !important;
         font-weight: 400 !important;
         font-family: 'Nunito', serif;
     }
 
     .subtitles {
-        font-size: 1.8rem;
+        font-size: 1.8rem !important;
         font-family: 'Nunito', serif;
         font-weight: 400;
     }
